Bug 496478 - legend coordinate settings broken
Summary: legend coordinate settings broken
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: latest
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-20 02:44 UTC by uwestoehr
Modified: 2025-02-19 23:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
LabPlot example (32.19 KB, application/x-xz)
2024-11-20 02:44 UTC, uwestoehr
Details
screenshot of my initial view (90.20 KB, image/png)
2024-11-20 02:45 UTC, uwestoehr
Details
screencast (2.93 MB, image/gif)
2024-11-20 02:46 UTC, uwestoehr
Details
screencast showing the real bug (209.75 KB, image/gif)
2024-11-28 23:02 UTC, uwestoehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2024-11-20 02:44:27 UTC
Created attachment 175961 [details]
LabPlot example

In order to check if bug 495885 is fixed, i took the latest nightly (Nov-19-2024) and encountered bugs.

- take the attached example file
- you can see in the attached screenshot that the legend is larger than the plot (which is weird)
- move (drag) the legend into the plot

result: the legend becomes invisible, see that attached screencast
I could not figure out how to make it visible
Comment 1 uwestoehr 2024-11-20 02:45:09 UTC
Created attachment 175962 [details]
screenshot of my initial view
Comment 2 uwestoehr 2024-11-20 02:46:46 UTC
Created attachment 175963 [details]
screencast
Comment 3 uwestoehr 2024-11-24 00:36:29 UTC
The bug persists with the latest CI build:
Release build 01487f6
Nov 21 2024, 20:05:46
System: Windows 10 Version 22H2
Comment 4 Martin 2024-11-27 09:49:28 UTC
The problem is that for the position x,y "relative" is used which has a bug (The relative values get really large)

Workaround: 
- set the x, y position to another value than relative
Comment 5 uwestoehr 2024-11-28 23:02:41 UTC
Created attachment 176198 [details]
screencast showing the real bug

Thanks, so the real bug is:
Dragging legend destroys the relative x,y settings. Whenever i drag the legend the relative values jump to crazy high and even negative values, see the new screencast.
Comment 6 Stefan Gerlach 2025-02-19 23:20:38 UTC
Git commit c5b1ad7d39862b75107464d9399a5ba61bdac757 by Stefan Gerlach.
Committed on 19/02/2025 at 23:04.
Pushed by sgerlach into branch 'master'.

changelog

M  +1    -0    ChangeLog
M  +0    -1    src/backend/worksheet/WorksheetElement.cpp
M  +1    -1    src/backend/worksheet/WorksheetElementPrivate.h

https://invent.kde.org/education/labplot/-/commit/c5b1ad7d39862b75107464d9399a5ba61bdac757